Fixes #13889 !strict Applied onoat's patch to remove the android workaround in View.js. With this fix, the dissolve animation started flickering, but just removing z-index from dissolve.css solved the problem.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@26682 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/transitions/dissolve.css
+++ b/mobile/themes/common/transitions/dissolve.css
@@ -1,11 +1,9 @@
 .mblDissolve.mblOut {
-	z-index: -100;
 	-webkit-animation-duration: 1s;
 	-webkit-animation-name: mblDissolveOut;
 	-webkit-animation-timing-function: cubic-bezier(.25,1,.75,0);
 }
 .mblDissolve.mblIn {
-	z-index: 0;
 	-webkit-animation-duration: 1s;
 	-webkit-animation-name: mblDissolveIn;
 	-webkit-animation-timing-function: cubic-bezier(.25,1,.75,0);
